--- a/themes/theme-ametys-base/sass/var/button/Button.scss
+++ b/themes/theme-ametys-base/sass/var/button/Button.scss
@@ -34,5 +34,3 @@ $button-toolbar-background-gradient-disabled: dynamic(null);
 
 $button-default-base-color: dynamic($ametys-highlight-color);
 $button-default-border-color: dynamic(darken($ametys-highlight-color, 14%));
-
-$button-arrow-glyph-color: $ametys-ribbon-button-arrow-glyph-color;
